<resources>
    <string name="app_name">Quizer</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_university_number">University number</string>
    <string name="action_start_quiz">Start quiz</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_name">The name only contains a-z,A-Z and blank</string>
    <string name="error_invalid_number">The university number only contains digits</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_summary">Summary</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prompt_x">x</string>
    <string name="prompt_x1">x1</string>
    <string name="prompt_x2">x2</string>
    <string name="my_university_number">3035456935</string>
    <string name="my_name">Jiewen Hai</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="test_answer">x1=1.2\nx2=13</string>
    <string name="wrong_answer">Wrong Answer.</string>
    <string name="warning_submit">Please finish question before submit.</string>
    <string name="test_formula">5x^2+12x+2=0</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="give_up">Give up</string>
</resources>
