<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:id="@+id/formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/formula_size"
            android:textStyle="italic"
            android:text="@string/test_formula"
            android:layout_gravity="center"
    />

    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/test_answer"
                android:textSize="@dimen/answer_size"
                android:layout_gravity="start"
        />

        <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/correct_answer"
                android:layout_gravity="end"

        />
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>